test/error/duplicate-fn-def.dsk
let f = (x: int) -> void
    return
end

let f = (y: int) -> void
    return
end
